syntax = "proto3";

                 package chatMessage;
service ChatMessageService {
 rpc createChatMessage (ChatMessageCreateInput) returns (ChatMessage) {}
rpc chatMessages (findManyParams) returns (stream ChatMessage) {}
rpc chatMessage (ChatMessageWhereUniqueInput) returns (ChatMessage) {}
rpc updateChatMessage (ChatMessageUpdateInput) returns (ChatMessage) {}
rpc deleteChatMessage (ChatMessageWhereUniqueInput) returns (ChatMessage) {} 
 }
message ChatMessageCreateInput {
string id = 1;
repeated ChatMessage otherChatMessages = 2;
string text = 3;
string timestamp = 4;
};
message ChatMessage {
string id = 1;
repeated ChatMessage otherChatMessages = 2;
string text = 3;
string timestamp = 4;
};
message ChatMessageWhereUniqueInput {
string id = 1;
repeated ChatMessage otherChatMessages = 2;
string text = 3;
string timestamp = 4;
};
message ChatMessageUpdateInput {
string id = 1;
repeated ChatMessage otherChatMessages = 2;
string text = 3;
string timestamp = 4;
};
message findManyParams {

};